delete deprecated api (#535)